Fix misalignment when displaying lg screen inline blocks in rows

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,6 +46,10 @@ p.paragraph + p.paragraph {
   width: 100%;
 }
 
+a:hover {
+  text-decoration: none;
+}
+
 a.link {
   color: $primary !important;
 }
@@ -54,9 +58,6 @@ a.link {
   vertical-align: middle;
 }
 
-*.d-inline-block:not(:first-child) {
-  margin-left: -4px;
-}
 
 nav {
   padding-left: 25px !important;
@@ -83,16 +84,6 @@ div.nav-profile-wrapper {
     }
   }
 }
-
-.content {
-  background-color: white;
-  color: black;
-  margin-top: 25px;
-  border-radius: 8px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
 
 @mixin avatar($width) {
   display: inline-block;
